# tekton-slack-task-status

./: .pylintrc  Makefile  README.md  pyproject.toml  tekton-slack-task-status.yaml
.github/workflows/: ci.yml
hack/: tekton-task-embed-script.py
samples/: pipelinerun.yaml
stepactions/: README.md  stepaction.yaml
task/: tekton-slack-task-status.py  tekton-slack-task-status.yaml
